Resolved .gif size was too large for Surge

--- a/css/styles.css
+++ b/css/styles.css
@@ -11957,7 +11957,7 @@ header.masthead .h1 {
 }
 
 .overlay:hover {
-  background-image: url("../assets/img/portfolio/thumbnails/gifs/PhotoReal.gif");
+  background-image: url("../assets/img/portfolio/thumbnails/gifs/photoReal_small.gif");
 }
 
 .overlay-two {
